<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#070A12"
    android:orientation="vertical"
    android:padding="22dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:text="@string/settings_title"
        android:textColor="#F4F5FA"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        style="@style/ProfileRow"
        android:layout_marginTop="22dp"
        android:text="@string/local_data_setting" />

    <TextView
        style="@style/ProfileRow"
        android:text="@string/no_notification_setting" />
</LinearLayout>
